# VSB-ZPG-Project

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  DrawableObject.h  HeadLight.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Scene_1.cpp  Scene_2.h  Scene_3.h  Shader.h  Source.cpp  SpotLight.h  Subject.h  Transform.cpp  TransformBase.h  ZPG_CV_1.sln  tinyobjloader.cpp
Classes/Application/: Application.cpp  Application.h  EnumMooveDirections.h  InputManager.cpp  InputManager.h
Classes/Camera/: Camera.cpp  Camera.h
Classes/Light/: DirectionalLight.h  FollowingLight.h  HeadLight.h  Light.h  LightManager.h
Classes/Model/: Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  StructModelData.h  StructModelSources.cpp  StructModelSources.h
Classes/Object/: DrawableObject.cpp  DrawableObject.h  Skydome.cpp  Skydome.h
Classes/Observer/: EnumObservableSubjects.h  Subject.cpp  Subject.h
Classes/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Scene_1.cpp  Scene_1.h  Scene_2.cpp  Scene_2.h  Scene_3.cpp  Scene_3.h
Classes/Shader/: EnumShaderType.h  ShaderProgram.cpp  ShaderProgram.h  StructShaderPair.h  StructShaderSources.cpp  StructShaderSources.h
Classes/Texture/: Texture.cpp  Texture.h
Classes/Transformation/: ObjectPosition.cpp  ObjectPosition.h  RandomTranslation.cpp  RandomTranslation.h  Rotate.cpp  Transform.cpp  Transform.h  Translate.cpp  Translate.h
Models/: plain.h
ShaderSource/: bling.frag  constant.frag  constant.vert  lamb.frag  lamb.vert  phongMultiLight.frag  phongMultiLight.vert  texture.frag  texture.vert
ZPG_CV_1/: Application.cpp  Application.h  Camera.cpp  Camera.h  ConstantShaderSources.h  DrawableBoject.h  DrawableObject.cpp  DrawableObject.h  DrawableOboject.cpp  DynamicRotation.cpp  DynamicRotation.h  EnumObservableSubjects.h  FollowingLight.cpp  FollowingLight.h  HeadLight.h  IBasicTransform.cpp  IBasicTransform.h  InputManager.cpp  Light.cpp  Light.h  Model.cpp  Model.h  Observer.h  PointLight.cpp  PointLight.h  Rectangle.cpp  Rectangle.h  Rotate.cpp  Rotate.h  Scale.cpp  Scale.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Scene_1.cpp  Scene_1.h  Scene_2.cpp  Scene_2.h  Scene_3.cpp  (+23 more)
ZPG_CV_1/Models/: triangle.h
ZPG_CV_1/ShaderSource/: constant.frag  constant.vert  lamb.frag  lamb.vert  phong.frag  phong.vert  phongMultiLight.frag
ZPG_CV_1/x64/Debug/: ZPG_CV_1.exe.recipe  ZPG_CV_1.ilk  vc143.idb
ZPG_CV_1/x64/Debug/ZPG_CV_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ZPG_CV_1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
